# CSE-168

./: .gitignore  CMakeLists.txt  LICENCE  ReadMe.md
PathTracer/: CMakeLists.txt  Camera.cpp  Camera.h  Colour.h  Image.cpp  Image.h  Maths.h  Ray.h  RayHit.h  RayTracer.cpp  RayTracer.h  RenderData.h  Scene.cpp  Scene.h  Viewer.cpp  Viewer.h  main.cpp
PathTracer/Acceleration/: AccelStructure.h  Grid.cpp  Grid.h
PathTracer/Containers/: TS_Stack.h
PathTracer/Lights/: DirectionalLight.cpp  DirectionalLight.h  PointLight.cpp  PointLight.h
PathTracer/Materials/: BlinnPhong.h
PathTracer/Maths/: Matrix.h  Quaternion.cpp  Quaternion.h  Utils.h  Vector2.h  Vector3.h  Vector4.h
PathTracer/Primitives/: Box.cpp  Box.h  Plane.cpp  Plane.h  Primitive.cpp  Primitive.h  Sphere.cpp  Sphere.h  Triangle.cpp  Triangle.h
PathTracer/Utils/: Logger.cpp  Logger.h  ProgressBar.h  Timer.cpp  Timer.h
PathTracer/Viewer/: Window.cpp  Window.h  vkengine.cpp  vkengine.h
Scenes/TestScenes/: scene1-camera1.test  scene1-camera2.test  scene1-camera3.test  scene1-camera4.test  scene2-camera1.test  scene2-camera2.test  scene2-camera3.test  scene3.test
Scripts/: RenderHW1.sh  RenderTestScenes.sh
